--- a/index.html
+++ b/index.html
@@ -190,6 +190,23 @@
         <a href=""><img src="images/icons/insta.png" alt=""></a>
         <a href=""><img src="images/icons/twitter.png" alt=""></a>
       </div>
+      <div class="copyrigthcontenar">
+        <div class="containar">
+          <ul class="footer-copy">
+            <li><a href="#">FAQS </a></li>
+            <li><a href="#">Privacy </a></li>
+            <li><a href="#">Policy </a></li>
+            <li><a href="#">Support</a></li>
+
+          </ul>
+        </div>
+        <div class="copyrighttext"><span>© Copyright</span> 2019 themelazer.info All rights reserved.</div>
+        <div class="copyrightmanu">
+        </div>
+
+      </div>
+
+
     </div>
     <div class="footer-colum">
       <h3 class="footer-tital">Let’s Message me</h3>
