--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
       </ul>
     </nav>
     <div class="banner">
-      <div class="banner-content">
-        <h4>Hi,I am</h4>
-        <h1>Im<span>A</span>mul <span>Islam</span></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, aspernatur. Ex, cum repellendus. Animi
-          illo dolorem laudantium quam veritatis iste consequuntur id ullam nostrum quos? Accusamus magni minus
-          consectetur dicta.</p>
-        <button class="nav-btn"><i class="fa-solid fa-download"></i>Download CV</button>
-        <button class="nav-btn"><i class="fa-solid fa-phone"></i>contact</button>
+      <div class="banner-contenar">
+        <div class="banner-content">
+          <h4>Hi,I am</h4>
+          <h1>Im<span>A</span>mul <span>Islam</span></h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, aspernatur. Ex, cum repellendus. Animi
+            illo dolorem laudantium quam veritatis iste consequuntur id ullam nostrum quos? Accusamus magni minus
+            consectetur dicta.</p>
+          <button class="nav-btn"><i class="fa-solid fa-download"></i>Download CV</button>
+          <button class="nav-btn"><i class="fa-solid fa-phone"></i>contact</button>
+        </div>
+        <div class="banner-img">
+          <img src="images/IMG_1128.png" alt="">
+        </div>
       </div>
-      <div class="banner-img">
-        <img src="images/IMG_1128.png" alt="">
-      </div>
-    </div>
     </div>
 
   </header>
@@ -179,45 +180,46 @@
   </main>
 
   <footer class="footer-area">
-    <div class="footer-colum">
+    <div= class="footer-contenar">
+      <div class="footer-colum">
 
-      <h3 class="footer-tital">Lets Connect</h3>
-      <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday
-        through
-        Friday.</p>
-      <div class="footer-icon">
-        <a href=""><img src="images/icons/facebook.png" alt=""></a>
-        <a href=""><img src="images/icons/insta.png" alt=""></a>
-        <a href=""><img src="images/icons/twitter.png" alt=""></a>
-      </div>
-      <div class="copyrigthcontenar">
-        <div class="containar">
-          <ul class="footer-copy">
-            <li><a href="#">FAQS </a></li>
-            <li><a href="#">Privacy </a></li>
-            <li><a href="#">Policy </a></li>
-            <li><a href="#">Support</a></li>
-
-          </ul>
+        <h3 class="footer-tital">Lets Connect</h3>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday
+          through
+          Friday.</p>
+        <div class="footer-icon">
+          <a href=""><img src="images/icons/facebook.png" alt=""></a>
+          <a href=""><img src="images/icons/insta.png" alt=""></a>
+          <a href=""><img src="images/icons/twitter.png" alt=""></a>
         </div>
-        <div class="copyrighttext"><span>© Copyright</span> 2019 themelazer.info All rights reserved.</div>
-        <div class="copyrightmanu">
+        <div class="copyrigthcontenar">
+          <div class="containar">
+            <ul class="footer-copy">
+              <li><a href="#">FAQS </a></li>
+              <li><a href="#">Privacy </a></li>
+              <li><a href="#">Policy </a></li>
+              <li><a href="#">Support</a></li>
+
+            </ul>
+          </div>
+          <div class="copyrighttext"><span>© Copyright</span> 2019 themelazer.info All rights reserved.</div>
+          <div class="copyrightmanu">
+          </div>
+
         </div>
 
+
       </div>
-
-
-    </div>
-    <div class="footer-colum">
-      <h3 class="footer-tital">Let’s Message me</h3>
-      <form action="">
-        <input type="text" name="" id="" placeholder="Your Name">
-        <input type="text" name="" id="" placeholder="Your Email">
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your massage"></textarea>
-      </form>
-      <input class="footer-btn" type="submit" value="submit">
-    </div>
-
+      <div class="footer-colum">
+        <h3 class="footer-tital">Let’s Message me</h3>
+        <form action="">
+          <input type="text" name="" id="" placeholder="Your Name">
+          <input type="text" name="" id="" placeholder="Your Email">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Your massage"></textarea>
+        </form>
+        <input class="footer-btn" type="submit" value="submit">
+      </div>
+      </div>
   </footer>
 </body>
 
